app/assets/stylesheets/components-vue/_progress-bar.scss
//--------------------------------------------------
// progress bar
//--------------------------------------------------
$marker-left-initial-small: rem-calc(18);
$marker-left-initial-medium: rem-calc(31);
$marker-right-final-medium: rem-calc(27);
$marker-separation-small: rem-calc(49);
$marker-separation-medium: rem-calc(167);

.progress-bar {
  color: $grey-dark;
  margin-top: rem-calc(16);
  margin-bottom: rem-calc(58);

  &__tooltip {
    background-color: $pink-light;
    border: solid 1px $pink;
    border-radius: rem-calc(4);
    color: $pink-dark;
    font-size: rem-calc(14);
    font-weight: bold;
    margin-bottom: rem-calc(18);
    padding: rem-calc(9 18 9 70);
    align-self: center;
    width: rem-calc(300);
    
    display: inline-block;
    position: relative;

    @include breakpoint ($medium) {
      align-self: flex-start;
      width: auto;
    }

    &:before {
      box-shadow: lighten($pink-dark, 40%) 2px 2px 0px -1px;
      background-color: $pink-light;
      content: '';
      width: rem-calc(18); height: rem-calc(18);

      position: absolute;
      bottom: rem-calc(-7);
      left: 0;

      transform: translateX($marker-left-initial-small) rotateZ(45deg);

      @include breakpoint ($medium) { transform: translateX($marker-left-initial-medium) rotateZ(45deg); }
    }
    
      @for $i from 2 through 4 {
        &-#{$i} {
          &::before {
            left: ($i - 1) * $marker-separation-small; 

            @include breakpoint ($medium) { left: ($i - 1) * $marker-separation-medium; }
          }
        }
      }

      @for $i from 5 through 6 {
        &-#{$i} {
          @include breakpoint ($medium) { align-self: flex-end; }

          &::before {
            left: ($i - 1) * $marker-separation-small; 

            @include breakpoint ($medium) { 
              left: auto;
              right: (6 - $i) * $marker-separation-medium; 

              transform: translateX(-$marker-right-final-medium) rotateZ(45deg);
            }
          }
        }
      }

    &-icon {
      background: image_url('icons/icon-tooltip.svg') no-repeat center;
      background-size: cover;
      width: rem-calc(52); height: rem-calc(47);

      display: block;
      position: absolute;
      top: rem-calc(-11);
      left: rem-calc(5);
    }
  }

  &__icon {
    background-size: cover;
    margin-bottom: rem-calc(16);
    width: rem-calc(305); height: rem-calc(19);

    @include breakpoint($medium) { width: rem-calc(912); height: rem-calc(36); }

    display: block;

    @for $i from 1 through 6 {
      &-#{$i} {
        background-image: image_url('icons/progress-bar-#{$i}-mobile.svg');
  
        @include breakpoint($medium) { 
          background-image: image_url('icons/progress-bar-#{$i}.svg'); 
        }
      }
    }
  }

  &__page-numbers {
    font-size: rem-calc(12);

    @include breakpoint($medium) { font-size: rem-calc(16); }
  }
}

